--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.12.1",
     "cors": "^2.8.5",
+    "jsonwebtoken": "^9.0.2",
     "prisma": "^5.12.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
